Δημιουργήθηκε με το Colaboratory

--- a/Handwritten_Digits_Classification.ipynb
+++ b/Handwritten_Digits_Classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUgeWQc4rSCNluQo0cxb+J",
+      "authorship_tag": "ABX9TyM3br9FbiG45FDG0dyBCFfh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -446,7 +446,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "So, we can say that the first five image have been predicted correctly\n",
+        "So, we can say that the first five images have been predicted correctly\n",
         "Let's visualize the predictions (correct & false)"
       ],
       "metadata": {
